force-app/main/default/objects/ssot__SalesModel__dlm/fields/ssot__PricingTerm__c.field-meta.xml
<CustomField>
    <fullName>ssot__PricingTerm__c</fullName>
    <label>Pricing Term</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PricingTerm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>