force-app/main/default/objects/ssot__SalesModel__dlm/fields/ssot__PricingTermUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PricingTermUnitOfMeasureId__c</fullName>
    <label>Pricing Term Unit Of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PricingTermUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>