force-app/main/default/objects/ssot__SalesModel__dlm/fields/ssot__rel_1709922321674_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1709922321674_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesModel_PricingTermUnitOfMeasureI_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>SalesModel_PricingTermUnitOfMeasureI_rel</relationshipLabel>
    <relationshipName>rel_1709922321674_end</relationshipName>
    <type>Lookup</type>
</CustomField>