force-app/main/default/objects/ssot__SalesModel__dlm/fields/ssot__SalesModelType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesModelType__c</fullName>
    <label>Sales Model Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesModelType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>